[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.pytest.ini_options]
testpaths = [ "tests/" ]
addopts = [ "--cov", "--cov-report=term-missing" ]
required_plugins = [ "pytest-cov" ]
minversion = "8.4.1"

[tool.coverage.run]
branch = true
omit = [ "__init__" ]
source = [ "src/" ]

[tool.coverage.report]
fail_under = 50
omit = [ "__init__" ]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 79
